fixing align text css

--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -14,7 +14,7 @@
 	width: 25%;
 	margin: 0;
 	justify-content: center;
-	align-items: left;
+	text-align: left;
 	flex-direction: column;
 }
 
